--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "express": "^4.17.1",
     "socket.io": "^3.0.5"
   },
+  "engines": {
+    "node": "14.15.4"
+  },
   "devDependencies": {
     "nodemon": "^2.0.7"
   }
